# SAI

./: .gitignore  CMakeLists.txt  README.md  btresetinstructions.txt  make.ps1  plotter.py  setupinstructions.txt  sniffer.py
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  bleclient.cpp  utils.cpp  utils.hpp
Source/Communication/: BLEClient.cpp  BLEClient.h  BLEManager.cpp  BLEManager.h  BLEOSCReceiver.cpp  BLEOSCReceiver.h  OSCBridge.cpp  OSCBridge.h
Source/Components/Core/: ComboBoxComponent.cpp  ComboBoxComponent.h  EllipseComponent.cpp  EllipseComponent.h  KnobComponent.cpp  KnobComponent.h  ParameterLinkerComponent.cpp  ParameterLinkerComponent.h  TitleBarComponent.cpp  TitleBarComponent.h
Source/Components/Dialog/: BLESettingsComponent.cpp  BLESettingsComponent.h
Source/Components/Effects/: DelayComponent.cpp  DelayComponent.h  DistortionComponent.cpp  DistortionComponent.h  EffectComponent.cpp  EffectComponent.h  FilterComponent.cpp  FilterComponent.h  GainComponent.cpp  GainComponent.h
Source/Components/Motions/: ParameterController.cpp  ParameterControllerComponent.cpp  ParameterControllerComponent.h  ProportionalControllerComponent.cpp  ProportionalControllerComponent.h  ThresholdControllerComponent.cpp  ThresholdControllerComponent.h
Source/Components/Navigation/: NavBar.cpp  NavBar.h
Source/Controllers/: ParameterController.cpp  ParameterController.h  ProportionalController.cpp  ProportionalController.h  ThresholdController.cpp  ThresholdController.h
Source/Dsp/: DelayDsp.cpp  DelayDsp.h  DistortionDsp.cpp  DistortionDsp.h  EffectDsp.h  FilterDsp.cpp  FilterDsp.h  GainDsp.cpp  GainDsp.h
Source/GUI/: AdvancedView.h  BLESettingsComponent.cpp  BLESettingsComponent.h  EffectsView.cpp  EffectsView.h  GainComponent.cpp  GainComponent.h  MatrixView.cpp  MatrixView.h  NavBar.cpp  NavBar.h
Source/Model/: DelayParams.h  DistortionParams.h  EffectsTreeState.cpp  EffectsTreeState.h  FilterParams.h  GainParams.h  ProportionalParams.h  SensorData.cpp  SensorData.h  ThresholdParams.h
Source/Views/: AdvancedView.cpp  AdvancedView.h  EffectsView.cpp  EffectsView.h  MatrixView.cpp  MatrixView.h
dtw/: client_withTemplate.py  dtw_funcs.py  plotter.py  run_dtw.py
firmware/: bleserver.py  devices.py  main.py
